--- a/services/data_service/Dockerfile
+++ b/services/data_service/Dockerfile
@@ -1,25 +1,20 @@
-FROM python:3.6.4-alpine3.7
+FROM python:3.8-alpine3.13
 
 RUN apk add --update curl gcc g++ git libffi-dev openssl-dev python3-dev build-base linux-headers \
     && rm -rf /var/cache/apk/*
 RUN ln -s /usr/include/locale.h /usr/include/xlocale.h
 
 ENV PYTHONUNBUFFERED=1 ENVIRONMENT=pre APP_HOME=/microservice/
-ENV DATABASE_DIR=database
 ENV PYMS_CONFIGMAP_FILE="$APP_HOME"config-docker.yml
 RUN mkdir $APP_HOME && adduser -S -D -H python
 
 RUN chown -R python $APP_HOME
+ADD . $APP_HOME
 WORKDIR $APP_HOME
 RUN pip install pipenv
-COPY Pipfile* /tmp/
-RUN cd /tmp && pipenv lock --requirements > requirements.txt
-RUN pip install -r /tmp/requirements.txt
-RUN pip install gevent==1.2.2 gunicorn==19.7.1
-ADD . $APP_HOME
-
-RUN mkdir $DATABASE_DIR
-RUN chmod 777 $DATABASE_DIR
+RUN pipenv lock --requirements > requirements.txt
+RUN pip install -r ./requirements.txt
+RUN pip install gevent==21.1.2 gunicorn==20.0.4
 
 EXPOSE 5000
 USER python
