--- a/services/data_service/config-docker.yml
+++ b/services/data_service/config-docker.yml
@@ -3,9 +3,9 @@ pyms:
     requests:
       data: ""
     swagger:
-        path: "swagger"
+        path: "project/swagger"
         file: "swagger.yaml"
-        url: "/ui/"
+        url: "/swagger/"
         project_dir: "project.views"
     tracer:
         client: "jaeger"
@@ -17,9 +17,5 @@ pyms:
   config:
     DEBUG: false
     TESTING: false
-    APP_NAME: data_service
-    APPLICATION_ROOT : /data_service
-    SQLALCHEMY_TRACK_MODIFICATIONS: true
-    SECRET_KEY: "gjr39dkjn344_!67#"
-    DATABASE: db.sqlite3
-    SQLALCHEMY_DATABASE_URI: sqlite:////microservice/database/db.sqlite3
+    APP_NAME: data-service
+    APPLICATION_ROOT : "/"
